; ModuleID = '/home/carl/AnghaBench/git/extr_oidmap.c_oidmap_free.c'
source_filename = "/home/carl/AnghaBench/git/extr_oidmap.c_oidmap_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oidmap = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @oidmap_free(%struct.oidmap* %0, i32 %1) #0 {
  %3 = alloca %struct.oidmap*, align 8
  %4 = alloca i32, align 4
  store %struct.oidmap* %0, %struct.oidmap** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.oidmap*, %struct.oidmap** %3, align 8
  %6 = icmp ne %struct.oidmap* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %16

8:                                                ; preds = %2
  %9 = load %struct.oidmap*, %struct.oidmap** %3, align 8
  %10 = getelementptr inbounds %struct.oidmap, %struct.oidmap* %9, i32 0, i32 0
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 0, i32 -1
  %15 = call i32 @hashmap_free_(i32* %10, i32 %14)
  br label %16

16:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @hashmap_free_(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
